log
Fri 21 Apr 2023 04:02:27 AM UTC: 
 tests:  1|8
total_score: 0/70
dcd186b
Fri 21 Apr 2023 04:02:56 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:23: error: ‘lt’ undeclared (first use in this function)
   45 |     map->lower_than = lt;
      |                       ^~
treemap.c:45:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
190ca7a
Fri 21 Apr 2023 04:03:11 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a1b8ede
Fri 21 Apr 2023 04:07:08 AM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   59 |             return current->pair;
      |                    ~~~~~~~^~~~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606:1: error: expected declaration or statement at end of input
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
57b7dae
Fri 21 Apr 2023 04:07:36 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   59 |             return current->pair;
      |                    ~~~~~~~^~~~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:62:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   62 |     return NULL;
      |            ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
da4c4ae
Fri 21 Apr 2023 04:08:04 AM UTC: 
 treemap.c | 26 +++++++++++++-------------
 1 file changed, 13 insertions(+), 13 deletions(-)
 tests:  11|6
total_score: 15/70
f532ebb
Fri 21 Apr 2023 04:17:45 AM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   53 |     TreeNode* parent = NULL;
      |               ^~~~~~
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
1a9fd4e
Fri 21 Apr 2023 04:18:00 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |     TreeNode* parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
fc5d760
Fri 21 Apr 2023 04:20:42 AM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  13|5
total_score: 25/70
88b62b0
Fri 21 Apr 2023 04:22:07 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
d0da21b
Fri 21 Apr 2023 04:26:03 AM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  0|0
ad77677
Fri 21 Apr 2023 04:28:06 AM UTC: 
 treemap.c | 34 +++++-----------------------------
 1 file changed, 5 insertions(+), 29 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:65:18: error: implicit declaration of function ‘createPair’ [-Werror=implicit-function-declaration]
   65 |     Pair* pair = createPair(key, value);
      |                  ^~~~~~~~~~
treemap.c:65:18: error: initialization of ‘Pair *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:66:25: error: too few arguments to function ‘createTreeNode’
   66 |     TreeNode* newNode = createTreeNode(pair);
      |                         ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
   29 | TreeNode * createTreeNode(void* key, void * value) {
      |            ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d478779
Fri 21 Apr 2023 04:28:44 AM UTC: 
 treemap.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
 tests:  15|4
total_score: 25/70
efd9370
Fri 21 Apr 2023 04:29:48 AM UTC: 
 treemap.c | 35 +++++++++++++++++++++++++++++++++++
 1 file changed, 35 insertions(+)
 tests:  18|3
total_score: 40/70
623a1aa
Fri 21 Apr 2023 04:32:09 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
ddc8ae2
Fri 21 Apr 2023 04:33:47 AM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
2913673
